Change repositories to jpa