@@ -6,7 +6,6 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -25,7 +24,7 @@ public class CartMapper {
     public List<CartDto> mapToCartDtoList(final List<Cart> carts) {
         return carts.stream()
                 .map(this::mapToCartDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
 }
